# icft

./: .gitignore  Makefile  README.md  cli.py  flake.nix  pyproject.toml
.github/workflows/: check.yml  pre-commit.yml
cptlms/: squad.py
notebooks/: embeddings.py  ftsquad.py  multinerd_eda.py  peft-ptune.html  pt_forwad_pass.py
prefix-tuning/: gpt2.py
src/cptlms/: bert.py  prompt_encoder.py  squad.py  trainer.py
src/cptlms/datasets/: multinerd.py  squad.py
src/cptlms/scripts/: benchmark_bert_multinerd.py  pt_bert_multinerd.py  pt_bert_squad.py
src/icft/datasets/: multinerd.py
src/icft/scripts/: fine_tune_bert_multinerd.py  prompt_tune_bert_multinerd.py
src/icftner/datasets/: multinerd.py
src/icftner/models/: bert.py  prompt_encoder.py
src/icftner/scripts/: benchmark_bert_multinerd.py  ft_bert_multinerd.py  ft_bert_squad.py  pt_bert_multinerd.py
tests/: test_datasets.py
tuning/: bert.py
tuning/util/: datasets.py
typesetting/: main.typ
